fix body container align

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ body {
   color: var(--text);
   font-family: 'corleone';
   margin: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
